--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 
 </head>
 <body>
-    <script src="index.js"></script>
+    <div id="timeContainer">
+        <div id="timeDisplay">00:00:00</div>
+        <button id="startBtn" class="timerBtn">Start</button>
+        <button id="pauseBtn" class="timerBtn">Pause</button>
+        <button id="resetBtn" class="timerBtn">Reset</button>
+    </div>
 
-    
+
+    <script src="index.js"></script>
 </body>
 </html>
