--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         <button id="splitBtn" class="timerBtn">SPLIT</button>
         <button id="resetBtn" class="timerBtn">RESET</button>
 
-        <div id="splitContainer">
-            
-        </div>
+        <div id="splitContainer"></div>
     </div>
 
 
